plugins {
    id 'com.android.application'
}

android {
    namespace = 'com.cropcenter'
    compileSdk = 36

    buildFeatures {
        buildConfig = true
    }

    defaultConfig {
        applicationId = "com.cropcenter"
        minSdk = 35
        targetSdk = 36
        versionCode = 1
        versionName = "1.0"

        // Expose the build timestamp so the Settings dialog can show which APK is installed.
        // UTC (not system default) so CI builds in different zones produce identical strings for the
        // same source state — otherwise a build from US-Pacific and a build from Europe/London would
        // ship different BUILD_TIME values for the same commit, defeating the dialog's "which APK
        // is this" purpose. Trailing "Z" suffix marks the timezone unambiguously in the UI.
        def buildTime = new Date().format("yyyy-MM-dd HH:mm:ss'Z'", TimeZone.getTimeZone("UTC"))
        buildConfigField "String", "BUILD_TIME", "\"${buildTime}\""
    }

    buildTypes {
        debug {
            // JaCoCo coverage opt-in: instrumentation is OFF by default so plain debug APKs deployed
            // to a phone for manual SAF / HDR / gesture testing run at normal speed. Pass `-Pjacoco`
            // to enable instrumentation when generating a coverage report:
            //   ./gradlew.bat :app:createDebugUnitTestCoverageReport -Pjacoco
            // HTML drill-down: app/build/reports/coverage/test/debug/index.html
            // XML for CI: app/build/reports/coverage/test/debug/report.xml
            testCoverageEnabled = project.hasProperty('jacoco')
        }
        release {
            minifyEnabled = true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    testOptions {
        // Local JVM unit tests don't need an emulator. The few classes that touch
        // android.graphics types stay out of the test source set; everything tested is
        // pure-Java logic (parsing, math, model state) that runs on the host JVM.
        // returnDefaultValues lets unmocked Android stubs return sensible defaults
        // (0 / null / false) so tests don't need a Robolectric runtime just to construct
        // an object that happens to import an Android type.
        unitTests {
            returnDefaultValues = true
        }
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.core:core:1.16.0'
    implementation 'androidx.activity:activity:1.9.0'
    // androidx ExifInterface — lint flags android.media.ExifInterface for known security bugs.
    // Used by FolderPickerDialog.decodeThumbnail to read EXIF orientation + the embedded thumbnail.
    implementation 'androidx.exifinterface:exifinterface:1.4.1'
    // RecyclerView backs FolderBrowser's content list — off-screen cells recycle so a 50k-photo
    // folder doesn't OOM during View inflation. Material 1.12.0 pulls this transitively, but the
    // explicit declaration locks the version and surfaces the dep in this file.
    implementation 'androidx.recyclerview:recyclerview:1.3.2'

    testImplementation 'junit:junit:4.13.2'
}
